--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,13 @@
-transformers>=4.36.0
-torch>=2.1.0
-datasets>=2.15.0
-huggingface-hub>=0.19.0
-accelerate>=0.25.0
-sentencepiece>=0.1.99
-protobuf>=4.25.1 
+transformers==4.36.0
+torch==2.1.0
+datasets==2.15.0
+huggingface-hub==0.19.0
+accelerate==0.25.0
+sentencepiece==0.1.99
+protobuf==4.25.1
+numpy>=1.24.0
+tqdm>=4.65.0
+scikit-learn>=1.3.0
+pandas>=2.0.0
+wandb>=0.15.0
+tensorboard>=2.13.0 
